--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
   "dependencies": {
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
+    "@nestjs/jwt": "^6.1.1",
     "@nestjs/mongoose": "^6.3.1",
+    "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/typeorm": "^6.3.1",
+    "guid-typescript": "^1.0.9",
     "mongoose": "^5.8.11",
     "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
