--- a/package.json
+++ b/package.json
@@ -21,21 +21,28 @@
   },
   "dependencies": {
     "@nestjs/common": "^6.10.14",
+    "@nestjs/config": "^0.2.2",
     "@nestjs/core": "^6.10.14",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/mongoose": "^6.3.1",
     "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/swagger": "^4.2.8",
     "@nestjs/typeorm": "^6.3.1",
+    "cache-manager": "^2.11.1",
+    "compression": "^1.7.4",
     "guid-typescript": "^1.0.9",
+    "md5-typescript": "^1.0.5",
     "mongoose": "^5.8.11",
     "mysql": "^2.18.1",
+    "nestjs-config": "^1.4.5",
     "passport": "^0.4.1",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.3",
     "typeorm": "^0.2.22"
   },
   "devDependencies": {
