--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^6.10.14",
     "@nestjs/config": "^0.2.2",
     "@nestjs/core": "^6.10.14",
+    "@nestjs/cqrs": "^6.1.0",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/mongoose": "^6.3.1",
     "@nestjs/passport": "^6.1.1",
